manifests/hidmo-staging/frontend/patches/deployment-api-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-management-ui
spec:
  template:
    spec:
      containers:
        - name: kitchen-management-ui
