manifests/hidmo-staging/frontend/patches/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchen-management-ui
spec:
  rules:
    - host: kitchen-staging.leultewolde.com
